save coverage and all ls -aRl for debugging

--- a/circle.yml
+++ b/circle.yml
@@ -29,13 +29,18 @@ test:
     - mv .coverage .coverage.1
     # need more loving from circleci coverage plugin
     - coverage run -p main.py -v -r
-    - ls -aRl .coverage*
     # combine with two processes running coverage seems broken
     - coverage run -p --branch test/configtest.py
+    - ls -aRl .coverage*
+    - mv .coverage .coverage.2
     - coverage run -p --branch test/rewardtest.py
+    - ls -aRl .coverage*
+    - mv .coverage .coverage.3
     # workaround for branch issue
     - coverage combine --debug=sys || /bin/true
+    - ls -aRl .coverage*
     - coverage combine --debug=sys || /bin/true
+    - ls -aRl .coverage*
 
   post:
     - rm -f config.xml
