--- a/circle.yml
+++ b/circle.yml
@@ -30,8 +30,10 @@ test:
     # need more loving from circleci coverage plugin
     - coverage run -p main.py -v -r
     # combine with two processes running coverage seems broken
-    - coverage run -p --branch test/configtest.py
+    - coverage combine
+    - coverage report --omit '/home/ubuntu/*/*/*/*,/usr/*,mpmain.py'
     - coverage run -p --branch test/rewardtest.py
+    - coverage run -p --branch test/configtest.py
     # workaround for branch issue arc issue
     - while ! coverage combine --debug=sys,trace; do echo "#"; done
     - ls .c*
