fix is not coverage directory

--- a/circle.yml
+++ b/circle.yml
@@ -26,7 +26,8 @@ test:
     # https://github.com/dlanger/nose-parallel
     - nosetests -v  --processes=4 --process-timeout=120 --with-coverage --cover-package queryGenerators --cover-package pkg --cover-package test --cover-package . --cover-package pkg/queryGenerators test/*.py:
           parallel: false
-    - cp .coverage .coverage.1 .coverage1
+    - cp .coverage .coverage.1
+    - cp .coverage .coverage1
     # need more loving from circleci coverage plugin
     - coverage run -p main.py -v -r
     # combine with two processes running coverage seems broken
