--- a/circle.yml
+++ b/circle.yml
@@ -29,6 +29,9 @@ test:
     # workaround for branch issue arc issue
     - while ! coverage combine --debug=sys,trace; do echo "#"; done
     - coverage report --omit '/home/ubuntu/*/*/*/*,/usr/*,mpmain.py'
+    # need loving for nosetest to run without arc issue
+    - ls .c*
+    - coverage erase
     - nosetests -v  --processes=4 --process-timeout=120 --with-coverage --cover-package queryGenerators --cover-package pkg --cover-package test --cover-package . --cover-package pkg/queryGenerators test/*.py:
           parallel: false
     - cp .coverage .coverage.1
@@ -36,7 +39,6 @@ test:
     - coverage run -p main.py -v -r
     # combine with two processes running coverage seems broken
     - coverage combine
-    - ls .c*
 
   post:
     - rm -f config.xml
