--- a/circle.yml
+++ b/circle.yml
@@ -29,7 +29,8 @@ test:
     # workaround for branch issue arc issue
     - while ! coverage combine --debug=sys,trace; do echo "#"; done
     - coverage report --omit '/home/ubuntu/*/*/*/*,/usr/*,mpmain.py'
-    - coveralls --rcfile=.coveragerc
+    # comment out until coveralls support feature
+    # - coveralls --rcfile=.coveragerc
     # need loving for nosetest to run without arc issue
     - ls .c*
     - coverage erase
