bugfix: mpmain.pyc pickle bugfix is to move from alpine to ubuntu 16.04. bugfix: remove quote from encryption and add more accounts. no coverage in codeship yet

--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -1,8 +1,24 @@
 version: '2'
 
 services:
-  codeship_example:
-    build: .
+  bing-test:
+    build:
+        context: ./test
+        image: kenney/bingreward-test
+        dockerfile: Dockerfile
+    volumes:
+       - test:/bin/test
+    cached: true
     environment:
-      EXAMPLE_ENV_VAR: example-var
+      fprocess: /bin/entry.sh
+    encrypted_env_file: env.encrypted
+    cmd: python -m compileall /bin/test
+
+  bing:
+    build:
+        image: kenney/bingreward
+        dockerfile: Dockerfile
+    cached: true
+    environment:
+      fprocess: /bin/entry.sh
     encrypted_env_file: env.encrypted
