--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -27,11 +27,11 @@
   steps:
     - name: clean
       command: coverage erase
+    - name: unittests
+      command: bash -c "cd /usr/src/app; nosetests -v --processes=4 --process-timeout=120 test/*.py"
+    - name: decrypt and run
+      command: bash -c 'env; cd /usr/src/app; openssl aes-256-cbc -d -in config.xml.encrypted -k ${KEY} -out config.xml; python mpmain.py 4 config.xml'
 
-    - name: decrypt
-      command: bash -c 'env; cd /usr/src/app; openssl aes-256-cbc -d -in config.xml.encrypted -k ${KEY} -out config.xml'
-    - name: mptests
-      command: bash -c "cd /usr/src/app; python mpmain.py 3 config.xml"
 #  - name: Test dockercfg Generator
 #    service: dockercfg_test
 #    type: push
