--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -29,7 +29,8 @@
       command: coverage erase
     - name: unittests
       command: bash -c "cd /usr/src/app && nosetests -v --processes=4 --process-timeout=120 --with-coverage --cover-package pkg --cover-package test --cover-package . test/*.py && coverage combine && coverage report && coveralls --rcfile=.coveragerc"
-
+    - name: decrypt and run
+      command: bash -c "cd /usr/src/app; openssl aes-256-cbc -d -in config.xml.encrypted.1 -k ${KEY} -out config.xml; python mpmain.py 4 config.xml"
 
 #  - name: Test dockercfg Generator
 #    service: dockercfg_test
