add /src volume to pass coverage report

--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -25,12 +25,14 @@
   tags: tests
   service: bing-test
   steps:
-    - name: clean
-      command: coverage erase
-    - name: unittests
-      command: bash -c "cd /usr/src/app && nosetests -v --processes=4 --process-timeout=120 --with-coverage --cover-package pkg --cover-package test --cover-package . test/*.py && coverage combine && coverage report && coveralls --rcfile=.coveragerc"
     - name: decrypt and run
-      command: bash -c "cd /usr/src/app; openssl aes-256-cbc -d -in config.xml.encrypted.1 -k ${KEY} -out config.xml; python mpmain.py 4 config.xml"
+      command: bash -c "cd /src; openssl aes-256-cbc -d -in config.xml.encrypted.1 -k ${KEY} -out config.xml"
+    - name: unittests
+      command: bash -c "cd /src && nosetests -v --processes=4 --process-timeout=120 --with-coverage --cover-package pkg --cover-package test --cover-package . test/*.py"
+    - name: reports
+      command: bash -c "cd /src; mv .coverage .coverage.1 && coverage run -p ./mpmain.py 4 config.xml"
+    - name: coveralls
+      command: bash -c "cd /src; coverage combine && coverage report && coveralls --rcfile=/usr/src/app/.coveragerc"
 
 #  - name: Test dockercfg Generator
 #    service: dockercfg_test
