--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -6,11 +6,10 @@ services:
         context: ./test
         image: kenney/bingreward-test
         dockerfile: Dockerfile
+    # https://documentation.codeship.com/pro/builds-and-configuration/docker-volumes/
     volumes:
        - test:/bin/test
-    cached: true
-    environment:
-      fprocess: /bin/entry.sh
+       - .:/src
     encrypted_env_file: env.encrypted
     cmd: python -m compileall /bin/test
 
