--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -17,6 +17,10 @@
           steps:
             - name: files
               command: ls -al /usr/src/app
+            - name: results
+              command: /bin/true || mkdir /src/result 
+            - name: check result
+              command: ls -al /src/
             - name: main test
               command: python /usr/src/app/main.py -h
 
@@ -33,11 +37,11 @@
     - name: reports
       command: bash -c "cd /src && mv .coverage .coverage.1 && coverage run ./mpmain.py 4 config.xml"
     - name: cov files
-      command: bash -c "ls -al /src/.co*"
+      command: bash -c "ls -al /src/.*"
     - name: coveralls
       command: bash -c "cd /src && coverage combine --debug data && coverage report --omit 'mpmain.py,pkg,pkg/queryGenerator' --debug data && coveralls --rcfile=/usr/src/app/.coveragerc"
     - name: cov files after
-      command: bash -c "ls -al /src/.co*"
+      command: bash -c "ls -al /src/.*"
 #  - name: Test dockercfg Generator
 #    service: dockercfg_test
 #    type: push
