--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -27,17 +27,16 @@
   service: bing-test
   steps:
     - name: check dir 
-      command: bash -c "ls -aRl /src"
+      command: bash -c "ls -al /src"
     - name: decrypt and run
       command: bash -c "cd /src && openssl aes-256-cbc -d -in config.xml.encrypted.1 -k ${KEY} -out config.xml"
     - name: unittests
-      command: bash -c "cd /src && nosetests -v --processes=4 --process-timeout=120 -c nose.config test/*.py"
+      command: bash -c "cd /src && nosetests -v --processes=4 --process-timeout=200 -c nose.config test/*.py"
     - name: reports
-      command: bash -c "cd /src && mv .coverage .coverage.1 && coverage run ./mpmain.py 4 config.xml"
-    - name: cov files
-      command: bash -c "ls -al /src/.*"
-    - name: coveralls
-      command: bash -c "cd /src && coverage combine --debug data && coverage report --omit 'mpmain.py,pkg,pkg/queryGenerator' --debug data && coveralls --rcfile=/usr/src/app/.coveragerc"
+      command: bash -c "cd /src && mv .coverage .coverage.1 && coverage run ./mpmain.py 4 config.xml && coverage combine --debug data && coverage report --debug data"
+#    - name: coveralls
+#      command: bash -c "cd /src && coverage combine --debug data && coverage report --debug data"
+# && coveralls --rcfile=/usr/src/app/.coveragerc"
     - name: cov files after
       command: bash -c "ls -al /src/.*"
 #  - name: Test dockercfg Generator
