--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,20 @@
 language: python
-os: osx
+dist: trusty
+sudo: false
+cache: pip
+python: 2.7
+
+env:
+  - TOXENV=py27
+  - TOXENV=py34
+  - TOXENV=py36
+
+before_script:
+  - pip install -U pip wheel tox
+
+script: tox
+
+after_success:
+  - cd tests
+  #- coveralls
+  #- cd -
