--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,10 @@ env:
   - TOXENV=py36
 
 before_script:
-  - pip install -U pip wheel tox
+  - pip install -r test/requirements.txt
 
-script: tox
+script: nosetests -v  --processes=4 --process-timeout=200 --with-coverage --cover-package pkg --cover-package pkg/queryGenerators --cover-package test --cover-package . --cover-package pkg/queryGenerators test/*.py
 
 after_success:
-  - cd tests
+  - coverage report --omit '/home/ubuntu/*/*/*/*,/usr/*,mpmain.py'
   #- coveralls
-  #- cd -
