--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,10 @@ env:
 
 before_script:
   - pip install -r test/requirements.txt
+  - cp config.xml.dist config.xml
 
 script: nosetests -v  --processes=4 --process-timeout=200 --with-coverage --cover-package pkg --cover-package pkg/queryGenerators --cover-package test --cover-package . --cover-package pkg/queryGenerators test/*.py
 
 after_success:
-  - coverage report --omit '/home/ubuntu/*/*/*/*,/usr/*,mpmain.py'
+  - coverage report --omit '/home/travis/virtualenv/python2.7.13/*,mpmain.py'
   #- coveralls
