circle and travis CI env token added for code climate

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
   - TOXENV=py27
   - TOXENV=py34
   - TOXENV=py36
+  - CODECLIMATE_REPO_TOKEN=b1bfad9809ef8b3be1eefa761352840a5ea632ef8bff0981fe295d61f9e2af84
 
 before_script:
   - pip install -r test/requirements.txt
