--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,9 @@ before_script:
   - pip install -r test/requirements.txt
   - openssl aes-256-cbc -d -in config.xml.encrypted.1 -k ${KEY} -out config.xml
 
-script: nosetests -v  --processes=4 --process-timeout=200 --with-coverage --cover-package pkg --cover-package pkg/queryGenerators --cover-package test --cover-package . --cover-package pkg/queryGenerators test/*.py
+script: nosetests -v  --processes=4 --process-timeout=200 -c nose.config test/*.py
 
 after_success:
-  - coverage report --omit '/home/travis/virtualenv/python2.7.13/*,mpmain.py'
+  - mpmain.py 6 config.xml
+  - coverage report --omit '/home/travis/*'
   #- coveralls
