--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ before_script:
 script: nosetests -v  --processes=4 --process-timeout=200 -c nose.config test/*.py
 
 after_success:
-  - travis_wait 120 python main.py -v -f config.xml
+  - travis_retry python mpmain.py 6 config.xml
   - coverage report --omit '/home/travis/*'
   #- coveralls
