avoid No output has been received in the last 10m0s,

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ before_script:
 script: nosetests -v  --processes=4 --process-timeout=200 -c nose.config test/*.py
 
 after_success:
-  - travis_retry python mpmain.py 6 config.xml
+  # avoid No output has been received in the last 10m0s.. issue for more output
+  #- travis_retry python mpmain.py 6 config.xml
+  - travis_retry python main.py -v -f config.xml
   - coverage report --omit '/home/travis/*'
   #- coveralls
