--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,11 @@ cache: pip
 python:
   - '2.7'
   # not happy with nose.cfg, so use --cover-package
-  - '3.5' 
+  - '3.6' 
 
 env:
   - TOXENV=py27
+  - TOXENV=py36
 
 before_script:
   - pip install -r test/requirements.txt
