--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,11 @@ sudo: false
 cache: pip
 python:
   - '2.7'
-  # not happy with nose.cfg, so use --cover-package
-  - '3.6' 
+  # not happy with nose.cfg, so use --cover-package and not happy with print without parenthesis
+  #- '3.6' 
 
 env:
   - TOXENV=py27
-  - TOXENV=py36
 
 before_script:
   - pip install -r test/requirements.txt
